# FRA501_exam1_6406_6428

./: README.md
fibo_turtlesim_control/: CMakeLists.txt  package.xml
fibo_turtlesim_control/launch/: fibo_via_point.launch.py
fibo_turtlesim_control/scripts/: controller.py  fibo_via_point_gen.py  scheduler.py  turtle_standby.py
fibo_turtlesim_control/srv/: SetGoal.srv
fibo_turtlesim_control/via_point/: via_point_01.yaml  via_point_02.yaml  via_point_03.yaml  via_point_04.yaml
